<resources>
    <string name="app_name">TriviaApp</string>
    <string name="code_dev">CodeDev</string>
    <string name="login_in_text">Sign Up to Continue</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="have_an_account">Have an Account?   </string>
    <string name="log_in">Log In</string>
    <string name="or">Login Via</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="log_in_to_continue">Log In to Continue</string>
    <string name="welcome">Welcome</string>
    <string name="google">Google</string>
    <string name="sign_up_image">sign_up_image</string>
    <string name="facebook">Facebook</string>
    <string name="oops_don_t_have_an_account">Oops…Don`t Have an Account</string>
    <string name="oh_i_have_an_account">oh…I have an account</string>
    <string name="remember_me">Remember Me</string>
    <string name="client_id">1040129278266-k8j2otd73f55i1aubqj4dsmautfj3qfq.apps.googleusercontent.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="error">Error</string>
    <string name="cancel">cancel</string>
    <string name="ok">Ok</string>
    <string name="please_wait">Please Wait...</string>
    <string name="trivia_application">Trivia Application</string>
    <string name="home">Home</string>
    <string name="trivia">Trivia</string>
    <string name="settings">Settings</string>
    <string name="codedev"><![CDATA[<CODEDEV/>]]></string>
</resources>