<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/login_header"
        android:background="@drawable/background_header"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_30ssp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_below="@+id/company_name"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/log_in_to_continue"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/poppins_light"
            android:textSize="@dimen/_20ssp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/sign_up_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/image_background"
        android:alpha="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/login_screen_01"
        android:scaleType="centerCrop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:endIconMode="custom"
        android:hint="@string/email_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email_">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/login_email_edit_text"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_15sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_input"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password_edit_text"
            android:padding="@dimen/_15sdp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_password_input"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_13ssp"
        style="@style/CustomButton"
        android:text="@string/login"
        android:paddingVertical="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@id/remember_me_radio_button" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/remember_me_radio_button"
        app:layout_constraintStart_toEndOf="@id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remember_me"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_19sdp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/login_password_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/lighterGrey"
        android:layout_marginTop="@dimen/_45sdp"
        android:id="@+id/login_or" />

    <RelativeLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/facebook_button"
        app:layout_constraintTop_toBottomOf="@id/login_or"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_height="wrap_content"
        android:id="@+id/google_button"
        android:background="@drawable/background_ripple"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/CustomButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"
            android:contentDescription="@string/google"
            android:layout_alignParentStart="true"
            android:id="@+id/image_google"/>

    </RelativeLayout>

    <RelativeLayout
        app:layout_constraintStart_toEndOf="@id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/google_button"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/_15sdp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:background="@drawable/background_ripple"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:id="@+id/facebook_button">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_facebook"
            android:contentDescription="@string/google"
            android:layout_alignParentStart="true"
            android:id="@+id/image_facebook"/>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dont_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_13ssp"
        android:paddingVertical="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        style="@style/CustomButton"
        android:text="@string/don_t_have_an_account"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/layout_loading_screen"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
